# zero2prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: rust.yml
configuration/: base.yaml  production.yaml
migrations/: 20221202122329_make_status_not_null_in_subscriptions.sql  20221202133511_create_subscriptions_tokens_table.sql  20221217074058_seed_user.sql  20221221070024_create_idempotency_table.sql  20230123172221_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscription_confirm.rs  subscriptions.rs
src/routes/admin/: abcd  dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
templates/: admin_dashboard.html  change_password_form.html  confirmation.html  confirmation.txt  login.html  newsletter_form.html
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
